update css and html

--- a/index.html
+++ b/index.html
@@ -1,39 +1,84 @@
 <!DOCTYPE html>
-<html>  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Crypto Con</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <link rel="stylesheet" href="debug.css">
-    <link rel="stylesheet" href="helpers.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"
+    />
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+    ></script>
+    <!-- <link rel="stylesheet" href="debug.css" /> -->
+    <link rel="stylesheet" href="helpers.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.cdnfonts.com/css/cocogoose" rel="stylesheet" />
+  </head>
   <body>
-  <!-- .hero -->
-<section class="hero is-fullheight">
-
-    <!-- .hero-head -->
-    <div class="hero-head">
-        <div class="columns is-mobile is-marginless">
-            <div class="column has-text-right is-one-fifth">
-                <p class="LOGO">LOGO</p>
-            </div>
-            <div class="column center is-three-fifths">
-                <p class="">About </p>
-                <p class="">Program</p>
-                <p class="">Join</p>
-                <p class="">Sponsor</p>
-                <p class="">News </p>
-            </div>
-            <div class="column right">
-                <p>CC Campaign</p>
-                
-            </div>
+    <!-- top banner -->
+    <section class="hero is-dark is-fixed-top">
+      <div class="columns is-flex">
+        <div class="column is-three-fifths"></div>
+        <div class="column is-narrow">
+          <figure class="image is-24x24">
+            <img src="images/facebook_f_64px.png" />
+          </figure>
         </div>
-    </div>
-    <!-- /.hero-head -->
-    
+        <div class="column is-narrow">
+          <figure class="image is-24x24">
+            <img src="images/twitter_64px.png" />
+          </figure>
+        </div>
+        <div class="column">English</div>
+        <div class="column">MyPage</div>
+        <div class="column">Logout</div>
+        <div class="column"></div>
+        <div class="column"></div>
+      </div>
     </section>
-    <!-- /.hero -->
+
+    <!-- navbar section -->
+    <section class="menu">
+      <div class="columns">
+        <div class="column is-two-fifths">
+          <div class="logo">
+            <span class="black">CC-</span>
+            <span class="red">CON</span>
+          </div>
+        </div>
+
+        <div class="column pl-0 pr-0">About</div>
+        <div class="column">Program</div>
+        <div class="column">Join</div>
+
+        <div class="column">Sponsor</div>
+        <div class="column">News</div>
+        <div class="column">
+          <div class="campaign">
+            <span class="red">Campaign</span>
+          </div>
+        </div>
+      </div>
+    </section>
+    <main>
+      "
+      <div class="container">
+        <p class="title is-block">"Hello Crypto Family"</p>
+        <h1>
+          CRYPTO CURRENCY <br />
+          GLOBAL CONFERENCE<br />
+          2023
+        </h1>
+      </div>
+    </main>
   </body>
 </html>
