update css and html, add bg image for headline

--- a/index.html
+++ b/index.html
@@ -124,7 +124,12 @@
       <div class="program pb-6">
         <div class="columns is-centered">
           <div class="column is-narrow has-text-centered">
-            <h4 class="title mt-2 mb-1 has-text-centered">Main Program</h4>
+            <h4
+              class="title is-4 has-text-white mt-2 mb-1 has-text-centered"
+              id="mainpg"
+            >
+              Main Program
+            </h4>
           </div>
         </div>
         <div class="columns is-centered has-text-centered">
@@ -176,7 +181,9 @@
         </div>
         <div class="columns is-centered">
           <div class="column has-text-centered has-text-white-ter mt-3 mb-3">
-            <a href="" class="has-text-white-ter"> SEE THE WHOLE PROGRAM </a>
+            <a href="" class="has-text-white-ter" id="seewhole">
+              SEE THE WHOLE PROGRAM
+            </a>
           </div>
         </div>
       </div>
