edit about page

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </div>
         </h1>
         <h1>
-          <div class="transparent is-hidden-mobile">
+          <div class="transparent is-hidden-mobile is-flex">
             CRYPTO CURRENCY <br />
             GLOBAL CONFERENCE<br />
             2023
@@ -328,8 +328,7 @@
         class="title is-4 has-text-grey mt-2 mb-5 has-text-centered">
         Partners
       </h4>
-      <span id="underline">  </span>
-    </div>
+     </div>
     
   </div>
   <div class="columns is-centered mt-0 mb-0 ">
