--- a/about.html
+++ b/about.html
@@ -95,5 +95,27 @@
         </div>
       </div>
     </nav>
+<main>
+  <section class="main">
+    <div class="columns has-text-centered mt-5">
+      <div class="column is-flex is-justify-content-center">
+    <h2>
+      CRYPTO CURRENCY <br>
+      GLOBAL CONFERENCE
+      2023
+    </h2>
+      </div>
+    </div>
+    <section class="container ">
+      <div id="about" class="has columns has-text-centered is-centered">
+        <div class="column is-9 is-flex pl-0 pr-0">
+          <p>Welcome to the Global Crypto Summit 2023, a pinnacle of innovation in the digital currency realm. Bringing together industry leaders, tech pioneers, and enthusiasts, our conference dives deep into the transformative world of cryptocurrencies and blockchain. Explore trends, solutions, and the future of decentralized finance with us. Shape the digital economy's next phase at the intersection of technology and opportunity.
+
+
+          </p>
+      </div>
+    </section>
+  </section>
+</main>
   </body>
 </html>
