--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
   </head>
   <body>
     <!-- top banner -->
-    <section class="hero is-dark is-hidden-mobile">
-      <div class="columns is-inline-flex">
+    <section class="hero is-dark is-hidden-mobile is-flex">
+      <div class="columns is-flex">
         <div class="column is-four-fifths"></div>
         <div class="column is-narrow">
           <figure class="image is-24x24">
@@ -50,11 +50,11 @@
     <!-- navbar section -->
 
     <nav
-      class="navbar pl-4 pr-4 is-flex-mobile"
+      class="navbar pl-4 pr-4 is-flex"
       role="navigation"
       aria-label="main navigation"
     >
-      <div class="navbar-brand is-flex-mobile">
+      <div class="navbar-brand is-flex">
         <a class="navbar-item" href="https://google.com">
           <div class="logo is-hidden-mobile">
             <span class="black">CCG-</span>
@@ -95,27 +95,41 @@
         </div>
       </div>
     </nav>
-<main>
-  <section class="main">
-    <div class="columns has-text-centered mt-5">
-      <div class="column is-flex is-justify-content-center">
-    <h2>
-      CRYPTO CURRENCY <br>
-      GLOBAL CONFERENCE
-      2023
-    </h2>
-      </div>
-    </div>
-    <section class="container ">
-      <div id="about" class="has columns has-text-centered is-centered">
-        <div class="column is-9 is-flex pl-0 pr-0">
-          <p>Welcome to the Global Crypto Summit 2023, a pinnacle of innovation in the digital currency realm. Bringing together industry leaders, tech pioneers, and enthusiasts, our conference dives deep into the transformative world of cryptocurrencies and blockchain. Explore trends, solutions, and the future of decentralized finance with us. Shape the digital economy's next phase at the intersection of technology and opportunity.
-
-
-          </p>
-      </div>
-    </section>
-  </section>
-</main>
+    <main>
+      <section class="main">
+        <div class="container pt-6 is-hidden-desktop">
+          <h2 class="title is-3 has-text-centered">Hello Crypto Family!</h2>
+        </div>
+        <div class="columns has-text-centered mt-5">
+          <div class="column is-flex is-justify-content-center">
+            <h1>
+              CRYPTO CURRENCY <br />
+              GLOBAL CONFERENCE 2023
+            </h1>
+          </div>
+        </div>
+        <section class="container">
+          <div id="about" class="has columns has-text-centered is-centered">
+            <div class="column is-9 is-flex pl-0 pr-0">
+              <p>
+                Welcome to the Global Crypto Summit 2023, a pinnacle of
+                innovation in the digital currency realm. Bringing together
+                industry leaders, tech pioneers, and enthusiasts, our conference
+                dives deep into the transformative world of cryptocurrencies and
+                blockchain.
+              </p>
+            </div>
+          </div>
+          <div id="contact" class="columns has-text-centered is-centered">
+            <div class="column is-4 is-flex pl-0 pr-0">
+              <p>
+                Feel free to contact us via Email or Phone<br />
+                ccgsummit@cryptolife.org
+              </p>
+            </div>
+          </div>
+        </section>
+      </section>
+    </main>
   </body>
 </html>
