update about page

--- a/about.html
+++ b/about.html
@@ -26,24 +26,25 @@
   </head>
   <body>
     <!-- top banner -->
-    <section class="hero is-dark is-hidden-mobile is-flex">
-      <div class="columns is-flex">
-        <div class="column is-four-fifths"></div>
-        <div class="column is-narrow">
-          <figure class="image is-24x24">
-            <img src="images/facebook_f_64px.png" />
-          </figure>
+    <section class="hero is-dark is-hidden-mobile pr-4">
+      <div class="columns">
+        <div class="column">
+          <ul>
+            <li>
+              <figure class="image is-24x24">
+                <img src="images/facebook_f_64px.png" />
+              </figure>
+            </li>
+            <li>
+              <figure class="image is-24x24">
+                <img src="images/twitter_64px.png" />
+              </figure>
+            </li>
+            <li id="eng">English</li>
+            <li id="mypage">MyPage</li>
+            <li id="logout">Logout</li>
+          </ul>
         </div>
-        <div class="column is-narrow">
-          <figure class="image is-24x24">
-            <img src="images/twitter_64px.png" />
-          </figure>
-        </div>
-        <div class="column pr-2" id="eng">English</div>
-        <div class="column pl-0 pr-2" id="mypage">MyPage</div>
-        <div class="column pl-0" id="logout">Logout</div>
-        <div class="column"></div>
-        <div class="column"></div>
       </div>
     </section>
 
@@ -96,19 +97,24 @@
       </div>
     </nav>
     <main>
-      <section class="main">
+      <section class="main2">
         <div class="container pt-6 is-hidden-desktop">
-          <h2 class="title is-3 has-text-centered">Hello Crypto Family!</h2>
+          <h2 class="title is-3 mt-5 mb-0 has-text-centered">
+            Hello Crypto Family!
+          </h2>
         </div>
-        <div class="columns has-text-centered mt-5">
-          <div class="column is-flex is-justify-content-center">
-            <h1>
-              CRYPTO CURRENCY <br />
-              GLOBAL CONFERENCE 2023
-            </h1>
+        <div class="container">
+          <div class="columns has-text-centered mt-5">
+            <div class="column is-flex is-justify-content-center">
+              <h1>
+                CRYPTO CURRENCY <br />
+                GLOBAL CONFERENCE 2023
+              </h1>
+            </div>
           </div>
         </div>
-        <section class="container">
+        <!-- about section -->
+        <div class="container">
           <div id="about" class="has columns has-text-centered is-centered">
             <div class="column is-9 is-flex pl-0 pr-0">
               <p>
@@ -116,20 +122,83 @@
                 innovation in the digital currency realm. Bringing together
                 industry leaders, tech pioneers, and enthusiasts, our conference
                 dives deep into the transformative world of cryptocurrencies and
-                blockchain.
+                blockchain.Explore trends, solutions, and the future of
+                decentralized finance with us. Shape the digital economy's next
+                phase at the intersection of technology and opportunity."
               </p>
             </div>
           </div>
-          <div id="contact" class="columns has-text-centered is-centered">
-            <div class="column is-4 is-flex pl-0 pr-0">
-              <p>
-                Feel free to contact us via Email or Phone<br />
-                ccgsummit@cryptolife.org
-              </p>
-            </div>
+        </div>
+        <!-- <div class="container"> -->
+        <div id="contact" class="columns has-text-centered is-centered">
+          <div class="column is-5 mt-5 pt-5">
+            <p>
+              Feel free to contact us via Email or Phone<br />
+              ccgsummit@cryptolife.org
+            </p>
           </div>
-        </section>
+        </div>
+        <!-- </div> -->
       </section>
     </main>
+    <!-- logo section -->
+    <div class="container">
+      <div class="columns">
+        <div class="column"></div>
+      </div>
+      <section>
+        <div id="ccgLogo" class="columns is-centered">
+          <div class="column is-7 has-text-centered">
+            <p>Crypto Currency Global Conference Logo 2023</p>
+          </div>
+        </div>
+        <div class="columns is-centered">
+          <div class="column is-7 has-text-centered">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+              ornare magna eros, quis feugiat facilisis.Lorem ipsum dolor sit
+              amet, consectetur adipiscing elit. Proin ornare magna eros, quis
+              feugiat facilisis.
+            </p>
+          </div>
+        </div>
+        <div class="columns is-centered pb-5 mb-5">
+          <div class="logo2">
+            <span class="black">CCG-</span>
+            <span class="red">CON</span>
+          </div>
+        </div>
+      </section>
+    </div>
+    <hr />
+    <section id="past">
+      <div class="columns is-centered">
+        <div class="column is-8 has-text-centered has-text-weight-bold">
+          <p>See the past CC Global Conferences</p>
+        </div>
+      </div>
+      <div id="takelook" class="columns is-centered">
+        <div class="column is-8 has-text-centered has-text-weight-bold">
+          <p>
+            Take a look at the last two CC Global Conferences in Washington and
+            Florida
+          </p>
+        </div>
+      </div>
+      <div class="columns is-centered">
+        <div class="column is-3">
+          <figure class="image is-large">
+            <img src="images/conference1.jpg" />
+            <div class="red-overlay"></div>
+          </figure>
+        </div>
+        <div class="column is-offset-1 is-3 ml-0">
+          <figure class="image is-large">
+            <img src="images/conference2.jpg" />
+            <div class="red-overlay"></div>
+          </figure>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
