edit html file to remove error

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </section>
 
-    <!-- navbar section -->Crypto Currency Global Conference Logo 2023
+    <!-- navbar section -->
 
     <nav
       class="navbar pl-4 pr-4 is-flex"
