link about and index files

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="navbar-start"></div>
 
         <div class="navbar-end">
-          <a class="navbar-item"> About </a>
+          <a class="navbar-item" href="about.html"> About </a>
 
           <a class="navbar-item"> Program </a>
 
