--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
         <div class="navbar-start"></div>
 
         <div class="navbar-end">
-          <a class="navbar-item"> About </a>
+          <a class="navbar-item" href="index.html"> Home </a>
 
           <a class="navbar-item"> Program </a>
 
