--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           </div>
         </div>
       </div>
-
+<section id="speakers">
       <!-- speakers -->
       <h4 class="title is-4 has-text-black has-text-weight-bold mb-6 has-text-centered">
         Featured Speakers
@@ -320,6 +320,7 @@
 </article>
 </div>
 </div>
+</section>
 <div class="partner mt3 pt-3 mb-0 ">
   <div class="columns is-centered">
     <div class="column has-text-centered">
