--- a/about.html
+++ b/about.html
@@ -200,5 +200,18 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="foot2">
+        <div class="logo pt-3 pl-6">
+          <span class="black">CCG-</span>
+          <span class="red">CON</span>
+        </div>
+
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />Proin
+          ornare magna eros,quis feugiat facilisis.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
