--- a/about.html
+++ b/about.html
@@ -200,16 +200,12 @@
         </div>
       </div>
     </section>
-    <footer class="footer">
-      <div class="foot2">
-        <div class="logo pt-3 pl-6">
-          <span class="black">CCG-</span>
-          <span class="red">CON</span>
-        </div>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />Proin
-          ornare magna eros,quis feugiat facilisis.
+    <footer class="footer-container2">
+      <div class="footer-content">
+        <span class="brand">CCG-CON</span>
+        <p class="description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare
+          magna eros, quis feugiat facilisis.
         </p>
       </div>
     </footer>
