--- a/backup/index.html
+++ b/backup/index.html
@@ -48,49 +48,48 @@
         </div>
       </div>
     </section>
- 
+
     <!-- navbar section -->
-    
-      <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="https://google.com">
-            <div class="logo">
-              <span class="black">CCG-</span><span class="red">CON</span>
-            </div>
-          </a>
 
-          <a
-            role="button"
-            class="navbar-burger"
-            aria-label="menu"
-            aria-expanded="false"
-          >
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="https://google.com">
+          <div class="logo">
+            <span class="black">CCG-</span><span class="red">CON</span>
+          </div>
+        </a>
 
-        <div class="navbar-menu">
-          <div class="navbar-end">
-            <a class="navbar-item" href="about.html">About</a>
-            <a class="navbar-item">Program</a>
-            <a class="navbar-item">Join</a>
-            <a class="navbar-item">Sponsor</a>
-            <a class="navbar-item">News</a>
-            <div class="navbar-item">
-              <div class="buttons">
-                <a class="button is-outlined red">Campaign</a>
-              </div>
+        <a
+          role="button"
+          class="navbar-burger"
+          aria-label="menu"
+          aria-expanded="false"
+        >
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
+
+      <div class="navbar-menu">
+        <div class="navbar-end">
+          <a class="navbar-item" href="about.html">About</a>
+          <a class="navbar-item">Program</a>
+          <a class="navbar-item">Join</a>
+          <a class="navbar-item">Sponsor</a>
+          <a class="navbar-item">News</a>
+          <div class="navbar-item">
+            <div class="buttons">
+              <a class="button is-outlined red">Campaign</a>
             </div>
           </div>
-        </div>   
-      </nav>
-      <div class="white-bar"></div>
+        </div>
+      </div>
+    </nav>
 
-      <div class="container" id="hello">
+    <main class="container">
       <div class="main">
-        <div class="container pt-3">
+        <div class="container pt-3" id="hello">
           <h2 class="title is-3 mt-0">Hello Crypto Family</h2>
           <h1>
             <div class="transparent mt-0">
@@ -246,53 +245,52 @@
             Featured Speakers
           </h4>
         </section>
-      </div>
-      </div>
-      <div class="partner mt3 pt-3 mb-0 is-hidden-mobile">
-        <div class="columns is-centered">
-          <div class="column has-text-centered">
-            <h4
-              class="title under is-4 has-text-grey mt-5 mb-5 has-text-centered"
-            >
-              Partners
-            </h4>
+
+        <div class="partner mt3 pt-3 mb-0 is-hidden-mobile">
+          <div class="columns is-centered">
+            <div class="column has-text-centered">
+              <h4
+                class="title under is-4 has-text-grey mt-5 mb-5 has-text-centered"
+              >
+                Partners
+              </h4>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="partners">
-      <img
-        src="https://www.freepnglogos.com/uploads/google-logo-png/file-google-logo-svg-wikimedia-commons-23.png"
-        alt="google logo"
-      />
-      <img
-        src="https://www.freepnglogos.com/uploads/netflix-tv-logo-png-9.png"
-        alt="netflix tv logo png"
-      />
-      <img
-        src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-with-birds-symbol-icon-24.png"
-        alt="twitter logo with birds symbol icon"
-      />
-      <img
-        src="https://www.freepnglogos.com/uploads/spotify-logo-png/spotify-attempts-clarify-lack-google-cast-support-13.png"
-        alt="spotify logo"
-      />
-      <img
-        src="https://www.freepnglogos.com/uploads/telegram-logo-11.png"
-        alt="telegram logo"
-      />
-    </div>
-
-    <footer class="footer-container">
-      <div class="footer-content">
-        <span class="brand">CCG-CON</span>
-        <p class="description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare
-          magna eros, quis feugiat facilisis.
-        </p>
+      <div class="partners">
+        <img
+          src="https://www.freepnglogos.com/uploads/google-logo-png/file-google-logo-svg-wikimedia-commons-23.png"
+          alt="google logo"
+        />
+        <img
+          src="https://www.freepnglogos.com/uploads/netflix-tv-logo-png-9.png"
+          alt="netflix tv logo png"
+        />
+        <img
+          src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-with-birds-symbol-icon-24.png"
+          alt="twitter logo with birds symbol icon"
+        />
+        <img
+          src="https://www.freepnglogos.com/uploads/spotify-logo-png/spotify-attempts-clarify-lack-google-cast-support-13.png"
+          alt="spotify logo"
+        />
+        <img
+          src="https://www.freepnglogos.com/uploads/telegram-logo-11.png"
+          alt="telegram logo"
+        />
       </div>
-    </footer>
 
+      <footer class="footer-container">
+        <div class="footer-content">
+          <span class="brand">CCG-CON</span>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+            ornare magna eros, quis feugiat facilisis.
+          </p>
+        </div>
+      </footer>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
